--- a/index.css
+++ b/index.css
@@ -89,8 +89,10 @@
     position: absolute;
     opacity: 0;
     cursor: pointer;
-    height: 0;
-    width: 0;
+    width: 15px;
+    height: 15px;
+    z-index: 100;
+    left: -3px;
   }
   .wrap_check span{
     width: 15px;
@@ -102,9 +104,22 @@
     border-radius: 50%;
     cursor: pointer;
   }
-  .check_todo:hover ~ .check_todo:before{
-    background: var(--gray-text-color);
+
+  .check_todo:checked ~ span{
+    background-image: linear-gradient(135deg, #57ddff, #c058f3);
   }
+
+  .check_todo:checked ~ span:before{
+    content: '';
+    position: absolute;
+    display: block;
+    top: 3px;
+    left: 2px;
+    width: 11px;
+    height: 9px;
+    background: url(images/icon-check.svg);
+  }
+
   .text_todo{
     display: inline-block;
     color: var(--text-color);
